dev: fixed submenu jump on hover

--- a/style.css
+++ b/style.css
@@ -110,9 +110,8 @@ header ul li a:hover {
 	opacity: 0;
 	right: 9999rem;
 	top: calc(100% - 12px);
-	transition: opacity .15s linear,transform .15s linear,right 0s .15s;
+	transition: opacity .15s linear, transform .15s linear;
 	transform: translateY(1.1rem);
-	width: 20rem;
 }
 .sub-menu:before {
 	content: "";
@@ -143,14 +142,12 @@ span.mobile-menu {
 	display: none;
 }
 
-.main-menu__item:hover .sub-menu,
-.main-menu__item a:hover .sub-menu {
+.main-menu__item:hover .sub-menu {
 	position: relative;
 	display: block;
 	z-index: 1;
 	right: -35px;
 	opacity: 1;
-	transform: translateY(0);
 	transition: opacity .15s linear,transform .15s linear;
 }
 
